app/guid-file/styles.scss
* {
    margin: 0;
    padding: 0;
    text-decoration: none;
}

.FileDetail_container {
    height: 100%;
    width: 100%;
    display: inline-flex;
    flex-direction: row;
    align-content: flex-start; // was flex-end

    &.Mobile {
        // flex-direction: column;
        flex-direction: column-reverse;
        padding: 0;
        margin: 0;
    }
}

.FileDetail_leftPanel {
    height: 100%;
    display: inline-flex;
    flex-direction: row;
    justify-content: flex-start; // was flex-start
    order: 1;

    &.Mobile {
        flex-direction: column;
        justify-content: flex-start;
        padding: 0;
        margin: 0;
        order: 2;
    }
}

.FileDetail_main {
    height: 100%;
    display: flex;
    flex-direction: column;
    align-content: stretch;
    justify-content: stretch;
}

.FileDetail_project_link_div {
    display: flex;
    flex-direction: row;
}

.FileDetail_project_link {
    display: flex;
    flex-direction: row;
    align-items: flex-start;

    &.Mobile {
        width: 20px;
        text-overflow: ellipsis;
    }
}

.FileDetail_project-link h3 {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    font-weight: 900;

    &.Mobile {
        width: 100%;
        // flex-wrap: nowrap;
        overflow-x: hidden;
        overflow-y: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
    }
}

.FileDetail_file-name {
    padding-left: 3px;
    font-weight: 900;

    &.Mobile {
        flex-wrap: wrap;
    }
}

.FileDetail_filename-buttons {
    display: inline-flex;
    flex-direction: row;
    align-content: flex-start;
}

.FileDetail_dropdown-list {
    display: inline-block;
    flex-direction: column;
}

.FileDetail_main-download-button button {
    padding: 0;
    margin: 0;
    color: #337ab7;
    background-color: #fff;
    border-radius: 0;
    height: 20px;
    width: 90px;
    font-size: 14px;
    text-align: left;
}

.FileDetail_main-download-button button:hover {
    color: #000;
    background-color: #fff;
    text-decoration: none;
}

.FileDetail_main-share-button button {
    padding: 0;
    margin: 0;
    color: #337ab7;
    background-color: #fff;
    border-radius: 0;
    height: 20px;
    width: 90px;
    font-size: 14px;
    text-align: left;
}

.FileDetail_main-share-button button:hover {
    color: #000;
    background-color: #fff;
    text-decoration: none;
}

.FileDetail-file-render {
    display: flex;
    flex-direction: row;
    justify-content: center;
    text-align: center;
    padding-top: 10px;

    &.Mobile {
        padding-top: 6px;
    }
}

.FileDetail_navbar-right {
    height: 100%;
    display: inline-flex;
    flex-direction: column;
    margin-top: 64px;
    border-left: 1px solid rgba(102, 102, 102, 0.3);
    transition: 0.2s;
    // order: 2;
    z-index: 1;
    text-align: center;

    &.Mobile {
        display: inline-flex;
        flex-direction: row;
        justify-content: space-evenly;
        order: 1;
    }
}

.FileDetail_navbar-buttons {

    display: flex;
    flex-direction: column;

    &.Mobile {
        display: inline-flex;
        flex-direction: row;
        justify-content: space-evenly;
        order: 2;
    }
}

// right navbar
// .FileDetail-navbar-right {
//     height: 100%;
//     display: inline-flex;
//     flex-direction: column;
//     background-color: rgb(0, 255, 255);
//     border-left: 1px solid rgb(102, 102, 102);
//     transition: 0.4s;
//     z-index: 1;
// }

.FilesDetail_Tags-slide {
    height: 100%;
    width: 0;
    display: flex;
    flex-direction: column;
    overflow-x: hidden;
    transition: 0.3s ease-in;
    padding-left: 50px;
    margin-left: 50px;
}

.FilesDetail_Tags-slide:focus-visible {
    border-left: 1px solid rgb(102, 102, 102);
}


.FilesDetail_Tags-slide-close {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
}

.FilesDetail_Version-slide {
    height: 100%;
    width: 0;
    display: flex;
    flex-direction: column;
    overflow-x: hidden;
    transition: 0.3s ease-in;
    text-align: left;
    padding-left: 50px;
    margin-left: 50px;
}

.FilesDetail_Version-slide:focus-visible {
    border-left: 1px solid rgb(102, 102, 102);
}

.FilesDetail_Version-slide-close {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
}

.FileDetail-navbar-buttons button {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    align-content: space-between;
    text-align: center;
    height: 40px;
    width: 50px;
    border: solid 2px transparent;
    vertical-align: center;
    border-radius: 2px;
    padding-bottom: 25px;
}

.FilesDetail_versions-button-div button {
    color: #337ab7;
    background-color: #fff;
    margin-bottom: 10px;
    text-decoration: none;
    border: 1px solid transparent;
    border-radius: 0;
}

.FilesDetail_versions-button button:hover {
    color: #000;
    background-color: #337ab7;
}

.FilesDetail_tags-button-div button {
    color: #337ab7;
    background-color: #fff;
    text-decoration: none;
    border: 1px solid transparent;
    border-radius: 0;
}

.FilesDetail_tags-button button:hover {
    color: #000;
    background-color: #337ab7;
}

